[project]
name = "labview-assistant"
version = "1.0.0"
description = "Enhanced LabVIEW MCP Server — AI-powered LabVIEW VI creation via Model Context Protocol"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.0",
    "pywin32>=310",
]

[project.scripts]
labview-mcp = "labview_mcp.run_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
